oop_mro/tests/trybuild/fail_base_cast_trait_name_collision.rs
use oop_mro::prelude::*;

oop_class! {
    class Animal {}
    class AsAnimal {}
}

fn main() {}
